[Fix - paginationSmsReport] Set page về trang 1 mỗi lần search báo cáo

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -278,6 +278,7 @@
   "error.contract-template.effective-end-date.compare": "End date must not be less than start date",
   "error.partner.name.required": "Partner is required",
   "error.contract.file.type": "Contract file error, please use another file",
+  "error.get.contract.list.report": "Export reporting data failed",
   "confirm.role.delete": "Are you sure you want to delete this role?",
   "confirm.contract-type.delete": "Are you sure you want to delete this type of contract?",
   "personal": "Personal",
