--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -291,6 +291,7 @@
   "error.contract-template.effective-end-date.compare": "Ngày kết thúc không được nhỏ hơn ngày bắt đầu",
   "error.partner.name.required": "Tên đối tác không được để trống",
   "error.contract.file.type": "File Hợp đồng lỗi, vui lòng sử dụng file khác",
+  "error.get.contract.list.report": "Xuất dữ liệu báo cáo lỗi",
   "confirm.role.delete": "Bạn có chắc chắn muốn xóa vai trò này không?",
   "confirm.contract-type.delete": "Bạn có chắc chắn muốn xóa loại hợp đồng này không?",
   "personal": "Cá nhân",
