Bo sung param nhom HD khi them moi va sua loai HD

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -728,5 +728,6 @@
   "status.sms.email":"Status SMS/EMAIL sending",
   "report.msale.search.failed": "Look up failed reports",
   "report.msale.download.failed": "Export failed report file",
-  "download.success": "Downloaded successfully"
+  "download.success": "Downloaded successfully",
+  "group.type.contract":"Group contract type"
 }
