--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -699,7 +699,7 @@
   "folder.openDetail": "Xem chi tiết thư mục",
   "folder.search.name.placeholder": "Nhập tên thư mục để tìm kiếm",
   "confirm.folder.delete": "Bạn có chắc chắn muốn xóa thư mục này không?",
-  "folder.type.contract": "Loại hợp đồng",
+  "folder.type.contract": "Danh sách hợp đồng",
   "folder.partner.name": "Tên đối tác",
   "folder.add.success": "Thêm thư mục thành công",
   "folder.edit.success": "Sửa thư mục thành công",
@@ -719,5 +719,10 @@
   "multi.sign.warning": "Hệ thống hỗ trợ ký tối đa 50 hợp đồng/ 1 lần ký",
   "expire.time.contract.notif":"Hợp đồng đã hết hạn ký",
   "information": "Thông tin",
-  "sign_cert_title": "Ký Chứng thư số server"
+  "sign_cert_title": "Ký Chứng thư số server",
+  "role.contract-folder.edit":"Sửa thư mục",
+  "role.contract-folder.delete":"Xóa thư mục",
+  "role.contract-folder.detail":"Chi tiết thư mục",
+  "name.folder.invalid":"Tên thư mục không được để trống"
+
 }
