fix bug thư mục (dungpt)

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -733,5 +733,9 @@
   "error.contract-type.required":"Contract type cannot be left blank",
   "error.upload.file.duplicate": "already exists, please select another file",
   "success.upload.file.attach": "Upload attached file successfully",
-  "error.upload.file.attach": "Uploading attachment failed"
+  "error.upload.file.attach": "Uploading attachment failed",
+  "role.contract-folder.edit":"Edit folder",
+  "role.contract-folder.delete":"Delete folder",
+  "role.contract-folder.detail":"Detail folder",
+  "name.folder.invalid":"Folder name not blank"
 }
