--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -726,6 +726,8 @@
   "name.folder.invalid":"Tên thư mục không được để trống",
   "delete.contract.question.folder":"Bạn có chắc chắc muốn xóa hợp đồng khỏi thư mục này không?",
   "delete.contract-folder.success": "Xóa hợp đồng khỏi thư mục thành công",
-  "add.contract.in.folder.success":"Thêm hợp đồng vào thư mục thành công"
+  "add.contract.in.folder.success":"Thêm hợp đồng vào thư mục thành công",
+  "no.choose.contract":"Bạn chưa chọn hợp đồng nào",
+  "name.folder.not.special.char":"Tên thư mục không được chứa ký tự đặc biệt"
 
 }
