[Update - UploadAttachFiles] Bổ sung lại check duplicate upload file đính kèm hđ hoàn thành, update text báo lỗi

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -730,5 +730,8 @@
   "report.msale.download.failed": "Export failed report file",
   "download.success": "Downloaded successfully",
   "contract.group": "Contract group",
-  "error.contract-type.required":"Contract type cannot be left blank"
+  "error.contract-type.required":"Contract type cannot be left blank",
+  "error.upload.file.duplicate": "already exists, please select another file",
+  "success.upload.file.attach": "Upload attached file successfully",
+  "error.upload.file.attach": "Uploading attachment failed"
 }
