--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -417,6 +417,7 @@
   "enter.tax.code": "Enter tax code",
   "enter.cardId": "Enter card id",
   "cardId": "Card Id",
+  "cardId1": "Card Id",
   "enter.note": "Enter note",
   "only.match.email.org": "Only match email in the same organization",
   "parent.unit": "Parent unit",
