[Fix - ForgotPassword] Chặn forgot password với mail mobifone site NB

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -755,6 +755,6 @@
   "add.contract.in.folder.success":"Thêm hợp đồng vào thư mục thành công",
   "no.choose.contract":"Bạn chưa chọn hợp đồng nào",
   "name.folder.not.special.char":"Tên thư mục không được chứa ký tự đặc biệt",
-  "contracts.existed.folder":"Hợp đồng đã tồn tại trong thư mục"
-
+  "contracts.existed.folder":"Hợp đồng đã tồn tại trong thư mục",
+  "mobifone.fail":"Bạn không thể đổi mật khẩu với email thuộc mobifone"
 }
