--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -742,6 +742,9 @@
   "success.upload.file.attach": "Upload attached file successfully",
   "error.upload.file.attach": "Uploading attachment failed",
   "error.recognition.back.cccd": "You are taking a photo of the front of the ID. Please take a photo of the back of your ID",
-  "contracts.existed.folder":"The contracts existed in folder"
+  "contracts.existed.folder":"The contracts existed in folder",
+  "overview.report":"Overview report",
+  "detail.report":"Detail report",
+  "contract.create.unit":"Contract unit create"
 
 }
