--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -757,7 +757,7 @@
   "name.folder.not.special.char":"Tên thư mục không được chứa ký tự đặc biệt",
   "contracts.existed.folder":"Hợp đồng đã tồn tại trong thư mục",
   "mobifone.fail":"Bạn không thể đổi mật khẩu với email thuộc mobifone",
-  "overview.report":"Báo cáo tổng quan eContract - msale",
+  "overview.report":"Báo cáo tổng quan eContract - mSale",
   "detail.report":"Báo cáo chi tiết eContract",
   "contract.create.unit":"Đơn vị tạo hợp đồng"
 }
