bo sung cot thoi gian hoan thanh trong bao cao chi tiet eContract

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -745,6 +745,7 @@
   "contracts.existed.folder":"The contracts existed in folder",
   "overview.report":"Overview report",
   "detail.report":"Detail report",
-  "contract.create.unit":"Contract unit create"
+  "contract.create.unit":"Contract unit create",
+  "complete.time":"Completion time"
 
 }
