--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -738,6 +738,6 @@
   "download.success": "Downloaded successfully",
   "contract.group": "Contract group",
   "error.contract-type.required":"Contract type cannot be left blank",
-  "contracts.existed.folder":"The contracts existed in folder"
-
+  "contracts.existed.folder":"The contracts existed in folder",
+  "my.org.not.authen":"My organization's contract list is not yet authorized"
 }
