--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -764,7 +764,6 @@
   "detail.report":"Báo cáo chi tiết eContract",
   "contract.create.unit":"Đơn vị tạo hợp đồng",
   "complete.time":"Thời gian hoàn thành",
-  "my.org.not.authen":"Danh sách hợp đồng tổ chức của tôi chưa được phân quyền",
   "create.contract.success":"Tạo hợp đồng thành công!",
   "contract.no.existed":"Số hợp đồng đã tồn tại",
   "note.update.person.processing":"Lưu ý: Chỉ được cập nhật thông tin 1 lần/ người tham gia luồng xử lý",
@@ -772,5 +771,7 @@
   "read.all.success":"Đọc tất cả thông báo thành công",
   "multi.delete.draft.success": "Xóa nhiều hợp đồng bản nháp thành công",
   "error.multi.delete.draft": "Xóa nhiều hợp đồng bản nháp thất bại",
-  "choose.contract.draft":"Vui lòng tích chọn hợp đồng bản nháp"
+  "choose.contract.draft":"Vui lòng tích chọn hợp đồng bản nháp",
+  "my.org.not.authen":"Danh sách hợp đồng tổ chức của tôi chưa được phân quyền"
+
 }
