--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -747,6 +747,7 @@
   "overview.report":"Overview report",
   "detail.report":"Detail report",
   "contract.create.unit":"Contract unit create",
-  "complete.time":"Completion time"
-
+  "complete.time":"Completion time",
+  "my.org.not.authen":"My organization's contract list is not yet authorized",
+  "create.contract.success":"Create contract successfully!"
 }
