--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -739,5 +739,6 @@
   "contract.group": "Contract group",
   "error.contract-type.required":"Contract type cannot be left blank",
   "contracts.existed.folder":"The contracts existed in folder",
-  "my.org.not.authen":"My organization's contract list is not yet authorized"
+  "my.org.not.authen":"My organization's contract list is not yet authorized",
+  "create.contract.success":"Create contract successfully!"
 }
