--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -745,7 +745,8 @@
   "error.upload.file.duplicate": "đã tồn tại, vui lòng chọn file khác",
   "success.upload.file.attach": "Upload file đính kèm thành công",
   "error.upload.file.attach": "Upload file đính kèm thất bại",
-  "error.recognition.back.cccd": "Bạn đang chụp mặt trước CCCD. Vui lòng chụp lại mặt sau của CCCD",
+  "error.recognition.back.cccd": "Bạn đang chụp mặt trước CMT/CCCD. Vui lòng chụp lại mặt sau của CMT/CCCD",
+  "error.recognition.front.cccd": "Bạn đang chụp mặt trước CMT/CCCD. Vui lòng chụp lại mặt sau của CMT/CCCD",
   "role.contract-folder.edit":"Sửa thư mục",
   "role.contract-folder.delete":"Xóa thư mục",
   "role.contract-folder.detail":"Chi tiết thư mục",
