tai nhieu hd hoan thanh - HD cua to chuc && them text luu y trong cap nhat nguoi trong luong xly

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -747,6 +747,7 @@
   "overview.report":"Overview report",
   "detail.report":"Detail report",
   "contract.create.unit":"Contract unit create",
-  "complete.time":"Completion time"
+  "complete.time":"Completion time",
+  "note.update.person.processing":"Note: Information can only be updated once/ a participant in the processing flow"
 
 }
