--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -761,5 +761,6 @@
   "overview.report":"Báo cáo tổng quan eContract - mSale",
   "detail.report":"Báo cáo chi tiết eContract",
   "contract.create.unit":"Đơn vị tạo hợp đồng",
-  "complete.time":"Thời gian hoàn thành"
+  "complete.time":"Thời gian hoàn thành",
+  "note.update.person.processing":"Lưu ý: Chỉ được cập nhật thông tin 1 lần/ người tham gia luồng xử lý"
 }
