--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -752,6 +752,7 @@
   "my.org.not.authen":"My organization's contract list is not yet authorized",
   "create.contract.success":"Create contract successfully!",
   "contract.no.existed":"The contract no is existed",
-  "note.update.person.processing":"Note: Information can only be updated once/ a participant in the processing flow"
+  "note.update.person.processing":"Note: Information can only be updated once/ a participant in the processing flow",
+  "read.all.noti": "Read all"
 
 }
