--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -439,7 +439,7 @@
   "relate.party":"CÁC BÊN LIÊN QUAN",
   "all":"Tất cả",
   "reject.question":"Bạn có chắc chắn muốn từ chối hợp đồng này không? Vui lòng nhập lý do từ chối",
-  "reasson.cancel.contract":"Lý do huỷ hợp đồng",
+  "reasson.cancel.contract":"Lý do hủy hợp đồng",
   "cancel.contract.question":"Bạn có chắc chắn muốn huỷ hợp đồng này không?",
   "exit":"Thoát",
   "content.confirm":"Bạn có đồng ý với nội dung, các điều khoản trong hợp đồng và sử dụng phương thức điện tử để thực hiện giao dịch không?",
