[Update - ContractComponent] Thêm api xóa nhiều HĐ, fix chuyển trang

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -305,6 +305,7 @@
   "btn.not.accept": "Not accept",
   "btn.share": "Share",
   "btn.delete": "Delete",
+  "btn.multi.delete": "Multi delete",
   "btn.done": "Done",
   "btn.add.user.view": "Add viewer",
   "btn.add.user.sign": "Add signer",
@@ -756,6 +757,6 @@
   "read.all.noti": "Read all",
   "read.all.success":"Read all notification successfully",
   "multi.delete.draft.success": "Delete multi draft contract successfully",
-  "erorr.multi.delete.draft": "Delete multi draft contract fail",
+  "error.multi.delete.draft": "Delete multi draft contract fail",
   "choose.contract.draft":"Please choose the draft contract"
 }
