--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -619,8 +619,10 @@
   "phone_mail":"Phone number/Email",
   "org.partner.search.name.placeholder":"Please enter the name, tax code of the organization to search",
   "personal.partner.search.name.placeholder":"Please enter the name, tax code of the organization to search",
-  "organization.customer.add":"Add partner",
+  "organization.customer.add":"Add organization",
+  "organization.customer.edit":"Edit organization",
   "personal.customer.add":"Add partner",
+  "personal.customer.edit":"Edit partner",
   "organization.customer.detail":"Organization partner detail",
   "personal.customer.detail":"Personal partner detail",
   "confirm.customer.delete": "Are you sure you want to delete this partner?",
