--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -649,7 +649,7 @@
   "org.partner.search.name.placeholder":"Nhập tên, mã số thuế của tổ chức để tìm kiếm",
   "personal.partner.search.name.placeholder":"Nhập tên, số điện thoại, CMT/CCCD của cá nhân để tìm kiếm",
   "organization.customer.add":"Thêm tổ chức",
-  "organization.customer.edit":"Sửa cá nhân",
+  "organization.customer.edit":"Sửa tổ chức",
   "personal.customer.add":"Thêm cá nhân",
   "personal.customer.edit":"Sửa cá nhân",
   "organization.customer.detail":"Chi tiết tổ chức",
