quy hoach lai menu eContract

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -30,11 +30,14 @@
   "menu.contract.create.list": "Contract created",
   "menu.contract.receive.list": "Contract received",
   "menu.contract.template.list": "Contract template",
+  "menu.contract.template": "Contract template",
   "menu.user.list": "User",
   "menu.organization.list": "Organization",
   "menu.role.list": "Role",
   "menu.contract.type.list": "Type of contract",
   "menu.check.sign.digital": "Check sign digital",
+  "menu.manager.user":"User management",
+  "menu.config":"Configuration",
   "no.data": "No data!",
   "dashboard.contract.received": "Contracts created",
   "dashboard.contract.created": "Contracts received",
