--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -30,11 +30,14 @@
   "menu.contract.create.list": "Hợp đồng đã tạo",
   "menu.contract.receive.list": "Hợp đồng đã nhận",
   "menu.contract.template.list": "Mẫu hợp đồng",
+  "menu.contract.template": "Hợp đồng mẫu",
   "menu.user.list": "Người dùng",
   "menu.organization.list": "Tổ chức",
   "menu.role.list": "Vai trò",
   "menu.contract.type.list": "Loại hợp đồng",
   "menu.check.sign.digital": "Kiểm tra chữ ký số",
+  "menu.manager.user":"Quản lý người dùng",
+  "menu.config":"Cấu hình",
   "no.data": "Không có dữ liệu!",
   "dashboard.contract.received": "Hợp đồng nhận",
   "dashboard.contract.created": "Hợp đồng tạo",
