--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -773,5 +773,6 @@
   "get.contract.data.err": "Unable to retrieve contract file data",
   "get.cert.data.err": "Unable to get digital certificate information",
   "get.org.data.err": "Error retrieving organizational data",
-  "sign.token.err": "Error signing USB Token"
+  "sign.token.err": "Error signing USB Token",
+  "sign.cert.err": "Error signing server digital certificate"
 }
