--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -58,6 +58,7 @@
   "contract.status.create.complete": "Complete creating",
   "contract.status.wait-response": "Wait response",
   "contract.status.undefined": "Undefined",
+  "contract.status.stored": "Storage",
   "contract.me": "My contract",
   "contract.organization": "Organizational contract",
   "contract.wait-for-me": "Contract to be handled",
@@ -769,5 +770,7 @@
   "expire.status":"Expire",
   "report.email": "EMAIL",
   "content.email": "CONTENT EMAIL",
-  "not.process.contract": "You do not have permission to view your organization's canceled contracts"
+  "not.process.contract": "You do not have permission to view your organization's canceled contracts",
+  "upload.contract.file.err": "Uploading contract file failed",
+  "upload.contract.file.success": "Uploaded contract file successfully"
 }
