--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -58,6 +58,7 @@
   "contract.status.wait-response": "Chờ phản hồi",
   "contract.status.create.complete": "Hoàn thành tạo hợp đồng",
   "contract.status.undefined": "Chưa xác định",
+  "contract.status.stored": "Lưu trữ",
   "contract.me": "Hợp đồng của tôi",
   "contract.organization": "Hợp đồng của tổ chức",
   "contract.wait-for-me": "Hợp đồng cần xử lý",
@@ -783,5 +784,7 @@
   "my.org.not.authen":"Danh sách hợp đồng tổ chức của tôi chưa được phân quyền",
   "expire.status":"Hết hiệu lực",
   "report.email": "EMAIL",
-  "not.process.contract": "Bạn không có quyền xem hợp đồng đã hủy của tổ chức"
+  "not.process.contract": "Bạn không có quyền xem hợp đồng đã hủy của tổ chức",
+  "upload.contract.file.err": "Upload file hợp đồng thất bại",
+  "upload.contract.file.success": "Upload file hợp đồng thành công"
 }
