[Update - Upload HĐ hoàn thành] Cho phép upload các loại file ngoài pdf, thêm preview ảnh/pdf, validate file đẩy lên

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -782,5 +782,6 @@
   "sign.token.err": "Error signing USB Token",
   "sign.cert.err": "Error signing server digital certificate",
   "upload.contract.file.err": "Uploading contract file failed",
-  "upload.contract.file.success": "Uploaded contract file successfully"
+  "upload.contract.file.success": "Uploaded contract file successfully",
+  "select.contract.file": "Select contract file (PDF, DOC, DOCX, PNG, JPG, JPEG, ZIP, RAR, TXT, XLS, XLSX)"
 }
