clear o text o so HD, o ky khi upload file pdf moi part1

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -782,5 +782,6 @@
   "choose.contract.draft":"Vui lòng tích chọn hợp đồng bản nháp",
   "my.org.not.authen":"Danh sách hợp đồng tổ chức của tôi chưa được phân quyền",
   "expire.status":"Hết hiệu lực",
-  "report.email": "EMAIL"
+  "report.email": "EMAIL",
+  "confirm.clear.text.sign": "Bạn có muốn xóa toàn bộ text, ô ký đã gán cho file hợp đồng cũ không?"
 }
