--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -799,5 +799,12 @@
   "upload.contract.file.success": "Upload file hợp đồng thành công",
   "select.contract.file": "Chọn file hợp đồng (PDF, DOC, DOCX, PNG, JPG, JPEG, ZIP, RAR, TXT, XLS, XLSX)",
   "confirm.clear.text.sign": "Bạn có muốn xóa toàn bộ text, ô ký đã gán cho file hợp đồng cũ không?",
-  "confirm.public.phone.pki": "Cho phép hiển thị thông tin SĐT lên chữ ký"
+  "confirm.public.phone.pki": "Cho phép hiển thị thông tin SĐT lên chữ ký",
+  "config.brandname.sms": "Cấu hình Brandname gửi SMS",
+  "error.unit.brandname.required": "Brandname không được để trống",
+  "error.unit.username.required": "Username không được để trống",
+  "error.unit.password.required": "Password không được để trống",
+  "error.valid.brandname": "Brandname không được vượt quá 100 ký tự.",
+  "error.valid.username": "Username không được vượt quá 100 ký tự.",
+  "error.valid.password": "Password không được vượt quá 100 ký tự."
 }
